modify comment of kernel Tips

--- a/westLab-MachineLearning-Lecture.ipynb
+++ b/westLab-MachineLearning-Lecture.ipynb
@@ -1203,7 +1203,7 @@
    "metadata": {},
    "source": [
     "### Tips:\n",
-    "> SVMでは大概RBF(ラジアル基底関数)を使えば良いということになっている。実際、sklearnの実装でも初期値はRBFを使うことになっている、RBFはガウス関数と同じ形状をしていて、事実上、無限次元にサンプル点を写像したあとに線形SVMで分離した場合と等価である"
+    "> SVMではカーネル関数として大概RBF(ラジアル基底関数)を使えば良いということになっている。実際、sklearnの実装でも初期値はRBFを使うことになっている、RBFはガウス関数と同じ形状をしていて、事実上、無限次元にサンプル点を写像したあとに線形SVMで分離した場合と等価である"
    ]
   },
   {
