--- a/westLab-MachineLearning-Lecture.ipynb
+++ b/westLab-MachineLearning-Lecture.ipynb
@@ -850,7 +850,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "実はさまざまなパラメータがデフォルトとして指定されていて、この項ではそのパラメータを変化させてその挙動を確かめる"
+    "実はさまざまなパラメータがデフォルトとして指定されていて、この項ではそのパラメータ（**ハイパーパラメータ**）を変化させてその挙動を確かめる"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tips:\n",
+    "> 機械学習を扱う上で「パラメータ」は頻発するワードだ。そのなかでも学習器自身が自動で獲得するものではなく、人の手で指定しなけばいけないものを他と区別して**ハイパーパラメータ**と呼ぶ。"
    ]
   },
   {
@@ -1743,7 +1751,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "どれも単純な形をしており、それほど理解も難しくないだろう。Reluという名前はニューラルネット独特ではあるが、これは制御工学でも出て来るランプ関数にほかならない。"
+    "どれも単純な形をしており、それほど理解も難しくないだろう。reluという名前はニューラルネット独特ではあるが、これは制御工学でも出て来るランプ関数にほかならない。"
    ]
   },
   {
@@ -1841,17 +1849,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "はどの機械学習を扱う研究でも立ち会う問題である。選択の方法もまた様々あるが、つまるところココが研究者の腕の見せどころ、すなわち「勘」に依存しているのはなんとも言えないところではある。このような学習器に人間が与えるパラメータのことを特に学習器が自動で決定するパラメータと区別して**ハイパーパラメータ**と呼ぶ。"
+    "はどの機械学習を扱う研究でも立ち会う問題である。選択の方法もまた様々あるが、つまるところココが研究者の腕の見せどころ、すなわち「勘」に依存しているのはなんとも言えないところではある。"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "実際、機械学習を使うにあたってはこの講義で習得した内容だけではかなり無理がある。例えば、機械学習では学習したいデータから**特徴量**と呼ばれる。機械学習にとって都合の良い情報に変換する段階があるが、今回は一切触れなかった。これは、特徴量抽出が直接的に機械学習器の特性を示すものではなく、どちらかというと事務的な手続きや、それぞれの現象への物理的、あるいは経験的アプローチになるためで、これだけで分野ごとに本が出るほど内容が濃く、説明のきりがないためだ。他にも時系列を扱うような機械学習器などもあるが、それも省いた。これらは各自で学んでほしい。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "最後に、この講義でわからなかったことはどんどん聞いてほしい。質問大歓迎！お待ちしてます"
+   ]
   }
  ],
  "metadata": {
