--- a/westLab-MachineLearning-Lecture.ipynb
+++ b/westLab-MachineLearning-Lecture.ipynb
@@ -31,7 +31,7 @@
     "    2. サポートベクトルマシン(SVM)\n",
     "    3. ランダムフォレスト(RF)\n",
     "    4. ニューラルネット(NN)\n",
-    "    5. 学習器の出力の相関\n",
+    "    5. アンサンブル学習\n",
     "3. 学習器の特性\n",
     "    1. データを用意（生成データ）\n",
     "    1. サポートベクトルマシン(SVM)\n",
@@ -511,24 +511,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tips:\n",
-    "> - 本来であれば適当な処理を施すことで名義尺度を（Idや名前等)も順序尺度する（そういった処理が要らない学習器もある：決定木）\n",
-    "> - [名義尺度、順序尺度、間隔尺度、比率尺度](https://mathwords.net/syakudo)"
+    "適当な処理を施すことでIdや名前等の名義尺度を順序尺度にする\n",
+    "[名義尺度、順序尺度、間隔尺度、比率尺度](https://mathwords.net/syakudo)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "学習器に対して出力にあたる生存/死亡を取り出す。学習器では出力にあたるデータをtとして表すことが多い"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Tips\n",
-    ">- tはteacherのtであり、教師信号という意味。正解を学習器に与えるデータに付される"
+    "学習器に対して出力にあたる生存/死亡を取り出す。ここでは学習器では出力にあたるデータをtとして表す"
    ]
   },
   {
@@ -561,7 +552,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "そのまま表（pandas.DataFrame型)として扱いたいところだが、学習器に入力する上で都合が悪いので通常numpy.array型に変換する"
+    "そのままpandas.DataFrame型として扱いたいところだが、学習器に入力する上で都合が悪いので通常numpy.array型に変換する"
    ]
   },
   {
@@ -581,7 +572,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "データを使って学習器に学習させるわけだが、全てのデータを使って学習させてしまうと、そのあと学習器をテストできなくなってしまい。定量的な比較ができなくなってしまう。そこで、学習器を学習させるためのデータ（train）と学習器をテストするためのデータ（test）に分ける。このとき、trainとtestにデータの偏りが起こらないようにランダムに分割する"
+    "学習器を学習させるためのデータ（train）と学習器をテストするためのデータ（test）に分ける"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ここで、「なぜ分ける必要があるのか？」と疑問に思うかもしれない。その疑問を解決するためには「過学習」「汎化性能」というキーワードと以下のTipsを参照してみると良い"
    ]
   },
   {
@@ -589,13 +587,15 @@
    "metadata": {},
    "source": [
     "### Tips\n",
-    "> - 最小二乗法などを思い出して見ると、すべてのデータを使って関数を近似し、その残差項をもって評価するから全てのデータを使ってしまっても定量的な学習器の評価ができるような気がしてしまうかもしれない。しかし、一般的な学習器を考えるとき、学習に使われたデータにのみ正しい答えが出力できる学習器を構成してしまう可能性がある。例えば、ある入力に対して今までの入力一致するものがあれば、それの出力を答える学習器があれば、全てのデータを学習に使えば、それに対して正答率100％の学習器が構成できる。実際こういう方法で学習器を構成することもあるが、このような方法は入力データに大きく依存しすぎてしまい「過学習」と呼ばれる過度に入力データにフィッティングしたものになる。このような学習器は「汎化性能」と呼ばれる、これから入力するまだ得られていない入力データ（タイタニック号で言えばこれから沈没する船の乗客情報）を入力したときの性能が低くなる。汎化性能こそ、学習器に獲得してほしい能力なのでこれをテストするために学習するデータ（train）とテストするデータ（train）にデータを分割するのが普通である"
+    "> 最小二乗法などを思い出して見ると、すべてのデータを使って関数を近似し、その残差をもって評価する．そのため，全てのデータを使ってしまっても構わないと思うかもしれない。しかし、一般的な学習器を考えるとき、学習に使われたデータにのみ正しい答えが出力できる学習器を構成してしまう可能性がある。例えば、ある入力に対して今までの入力が一致するものがあれば、その出力を答える学習器があれば、全てのデータを学習に使えば、それに対して正答率100％の学習器が構成できる。実際こういう方法で学習器を構成することもあるが、このような方法は入力データに大きく依存しすぎてしまい「過学習」と呼ばれる過度に入力データにフィッティングしたものになる。このような学習器は「汎化性能」と呼ばれる、これから入力するまだ得られていない入力データ（タイタニック号で言えばこれから沈没する船の乗客情報）を入力したときの性能が低くなる。汎化性能こそ、学習器に獲得してほしい能力なのでこれをテストするために学習するデータ（train）とテストするデータ（train）にデータを分割するのが普通である．"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#ランダムに分割するためのランダムなインデックスを用意\n",
@@ -626,14 +626,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"http://datachemeng.com/wp-content/uploads/2017/06/SnapCrab_2017-6-23_16-29-54_No-00.png\" width=\"640px\" \"SVM\">"
+    "さっそくSVMを使ってみよう"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "pythonで学習器を使うコードはものの数行で足りる。学習にはtrain以外使っていないことに注意しよう"
+    "pythonで学習器を使うコードはものの数行で足りる。機械学習だからといって何も構える必要は一切ない"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "学習にはtrain以外使っていないことに注意しよう"
    ]
   },
   {
@@ -709,12 +716,19 @@
    "metadata": {},
    "source": [
     "### Tips:\n",
-    "> - 機械学習関連を勉強しているとよくTrue Positive(TP)だとかFalse Negative(FN)という言葉を聞く。これは学習器がどう正解したか、どう間違ったかの様を表す言葉である。「True」は「正しい」ということで学習器が正しい出力を出したということ、逆に「False」は「間違った」出力を出したということだ。つぎに、「Positive」は「陽」のという意味でこれは学習するデータに依存するが例えばタイタニック号であれば「生存する」という意味になる。「Negative」は逆に「陰」、「死亡する」という意味だ。ここまでの内容を総括すると、「True Positive」とは「正しく生存する」と答えたということで、「False Negative」とは「間違って死亡した」と答えたということだ。つまり、どちらも正しくは生存するが答えなのだが、かたや「正しく生存する」と答え、他方は「間違って死亡する」と答えた。ただそれだけのことだ。聞いてみれば当たり前のことだが、こういう話は基礎的で引っかかりやすいし、話も単純なので酒の席なのでよく重宝される豆知識である。\n",
+    "> - 機械学習関連を勉強しているとよくTrue Positive(TP)だとかFalse Negative(FN)という言葉を聞く。これは学習器がどう正解したか、どう間違ったかの様を表す言葉である。「True」は「正しい」ということで学習器が正しい出力を出したということ、逆に「False」は「間違った」出力を出したということだ。つぎに、「Positive」は「陽」のという意味で，これは学習するデータに依存する．例えばタイタニック号であれば，「生存する」という意味になる。「Negative」は逆に「陰」、「死亡する」という意味だ。ここまでの内容を総括すると、「True Positive」とは「正しく生存する」と答えたということで、「False Negative」とは「間違って死亡した」と答えたということだ。つまり、どちらも正しくは生存するが答えなのだが、「正しく生存する」と答え、他方は「間違って死亡する」と答えた。ただそれだけのことだ。聞いてみれば当たり前のことだが、こういう話は基礎的で引っかかりやすいし、話も単純なので酒の席なのでよく重宝される豆知識である。\n",
     "> -  [wikipedia precision and recall](https://en.wikipedia.org/wiki/Precision_and_recall)\n",
     "\n",
     "> $Precision =  \\frac{TP}{TP + FP} \\\\\n",
     "Recall =  \\frac{TP}{TP + FN} \\\\\n",
     "F =  2\\frac{Precision*Recall}{Precision + Recall}$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ここまでで、一連の使い方は終わり。データさえ用意してしまえば、大した労力をいとわないことがわかるだろう"
    ]
   },
   {
@@ -728,7 +742,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://alphaimpact.jp/assets/2017/03/random_forest.png\" width=\"640px\" \"RF\">"
+    "SVM同様、RFを使ってみる。RFもほとんど同じように使える"
    ]
   },
   {
@@ -784,6 +798,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "使う学習器の名前が変わっただけで、ほとんど他には変化がない。このようにライブラリさえ使ってしまえば、たいていの機械学習器は簡単に構成できる"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## D.ニューラルネット（N.N）"
    ]
   },
@@ -791,7 +812,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://alphaimpact.jp/assets/2017/05/multilayer_perceptron.png\", width=\"480px\" \"2 Layer Perceptron\">"
+    "最近流行りのNNを使ってみよう。NNの利用法としてあまり一般的な方法ではないが簡単のためsklearnを使う"
    ]
   },
   {
@@ -850,21 +871,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ここまでで3つの学習器を見てきたが、精度が異なっていることが分かるだろう。SVM、RFの2つは比較的高精度を出せることで有名な「枯れた」技術である"
+    "ここまでで3つの学習器を見てきたが、精度が異なっていることが分かるだろう"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "さて、精度が異なっていることは分かるが、どうして異なっているかが隠されていてわけが分からないので、「出力の相関」という観点から差を見ていく"
+    "さて、精度に差があることが分かるだろう。この「差」に注目して、さらに良い学習器を作っていきたい"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## E.学習器の出力の相関"
+    "## E.アンサンブル学習"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[参考になるページ](https://mlwave.com/kaggle-ensembling-guide/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "「３人集まれば文殊の知恵」ということわざにもあるように、学習器も集めればより良いものが作れそうだ。このやり方を**アンサンブル学習**と言う"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "まずはそれぞれの学習器の出力をリストとして集める"
    ]
   },
   {
@@ -886,7 +928,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "それぞれの学習器判定の関係性について見てみる"
+    "今回は「集め方」として多数決を使う"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy: 0.761682242991\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = (y_list.sum(axis=0) > 1).astype(np.int) #３つの学習器の多数決を取る\n",
+    "#R  = sklearn.metrics.classification_report(y, t_test)\n",
+    "#print(R)\n",
+    "a = sklearn.metrics.accuracy_score(t_test, y)\n",
+    "print('accuracy:', a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "今回は良くなったとはいえない結果だった"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "この結果の理由を学習器の差、特に相関に注目して考察してみよう"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "それぞれの学習器判定の関係性について見てみるための関数を定義する（詳細を眺める必要はない）"
    ]
   },
   {
@@ -909,7 +993,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SVM と RF"
+    "SVM と RFの相関"
    ]
   },
   {
@@ -938,7 +1022,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SVM と N.N"
+    "SVM と NNの相関"
    ]
   },
   {
@@ -967,7 +1051,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "RF と N.N"
+    "RF と NNの相関"
    ]
   },
   {
@@ -1003,50 +1087,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "相関がわかったは良いが、これがなんの役に立つかがよくわからない。そこで、次の概念を紹介する"
+    "相関は-1～1を取る値で絶対値が大きいほど相関が大きい。よって、全ての学習器において、そこそこ大きな相関があることが分かる。実はこれはアンサンブル学習にはあまり好ましくない"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### アンサンブル学習\n",
-    "様々な「独立な」学習器を集めて、全体としての精度を向上させようという考え方"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             precision    recall  f1-score   support\n",
-      "\n",
-      "          0       0.82      0.80      0.81       134\n",
-      "          1       0.67      0.70      0.69        80\n",
-      "\n",
-      "avg / total       0.76      0.76      0.76       214\n",
-      "\n",
-      "accuracy: 0.761682242991\n"
-     ]
-    }
-   ],
-   "source": [
-    "y = (y_list.sum(axis=0) > 1).astype(np.int) #３つの学習器の多数決を取る\n",
-    "R  = sklearn.metrics.classification_report(y, t_test)\n",
-    "a = sklearn.metrics.accuracy_score(t_test, y)\n",
-    "print(R)\n",
-    "print('accuracy:', a)"
+    "極端なことを言えば、全ての学習器の相関が1、つまり全く同じ出力をするときに、多数決を取ることに全く意味がないことが分かるだろう。アンサンブル学習に使う学習器はできるだけ独立な方がよいのだ"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "今回は3つと少なく、しかも相関が大きいもの同士で出力を得ているためうまく行かなかった。しかし、アンサンブル学習は非常に強力な学習器構成法である"
+    "また、多数決という方法もあまり使われない。「Stacked Generalization & Blending」といって、学習器の出力を違う学習器の入力に使うのがより一般的に使われる"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ただし、研究という分野に限ればアンサンブル学習せずに各々の精度に着目することが多いようだ"
    ]
   },
   {
@@ -1166,8 +1228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tips:\n",
-    ">3章はsklearnのドキュメントである[このページ](http://scikit-learn.org/stable/auto_examples/classification/plot_classifier_comparison.html)に準拠して作成した。sklearnのドキュメントは他にも様々な学習器が紹介されている上、学習器を実装するに当たっての引数の意味から例まで至れり尽くせりである。"
+    "3章はsklearnのドキュメントである[このページ](http://scikit-learn.org/stable/auto_examples/classification/plot_classifier_comparison.html)に準拠して作成した。sklearnのドキュメントは他にも様々な学習器が紹介されている上、学習器を実装するに当たっての引数の意味から例まで至れり尽くせりである。"
    ]
   },
   {
@@ -1437,7 +1498,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "次に、まっすぐな分離しか出来ないSVMにカーネル関数を与えることでグニャグニャした（非線形な）分離を可能にさせる。ここで、登場するのが係数gammaである"
+    "<img src=\"http://datachemeng.com/wp-content/uploads/2017/06/SnapCrab_2017-6-23_16-29-54_No-00.png\" width=\"640px\" \"SVM\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SVMではマージンと呼ばれる、分離したいデータ間の幅が最大になるように**線形**に分離する学習をする。線形にというのが、まさにまっすぐにということであり、分離がまっすぐなのは当たり前のことだ"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ただ、まっすぐな分離ばかりでは多くの学習で問題があるのは明らかだろう。そこで登場したのがカーネル関数だ。\n",
+    "まっすぐな分離しか出来ないSVMにカーネル関数を与えることでグニャグニャした（非線形な）分離を可能にさせている。ここで、登場するのが係数gammaである"
    ]
   },
   {
@@ -1618,6 +1694,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"https://alphaimpact.jp/assets/2017/03/random_forest.png\" width=\"640px\" \"RF\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "RFはデータを復元抽出という無作為な抽出を行うことでデータを分割し、さらにランダムに選んだ特徴量を使って決定木を構成する。この決定木を集めて多数決を取ることで最終的な判定をしている。決定木の構成方法はここでは省くが、以下に見るように決定木はある次元についてスパッと2つに分割する操作を繰り返すため、その分割面は先に見たようにカクカクしたものになる"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "![決定木](http://scikit-learn.org/stable/_images/iris.svg)"
    ]
   },
@@ -1625,7 +1715,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "つぎにmax_depthを変えて、その変化を見る"
+    "決定木を構成する上で重要なハイパーパラメータの一つに木の深さの最大値max_depthを変えて、その変化を見る"
    ]
   },
   {
@@ -2004,6 +2094,13 @@
     "for act_f in ['identity','logistic', 'tanh', 'relu']:\n",
     "    print('activation=', act_f)\n",
     "    show_character_ML(MLPClassifier(random_state=0, activation=act_f))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://alphaimpact.jp/assets/2017/05/multilayer_perceptron.png\", width=\"480px\" \"2 Layer Perceptron\">"
    ]
   },
   {
